# alis

./: .gitignore  LICENSE  MyWebCall.reg  README.md  flake.nix  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
pages/: _app.tsx  anyname.d.ts  index.tsx
prisma/: schema.prisma
public/: caigou.docx  ruku.doc
src/: middleware.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/abi/: items.proto
src-tauri/inventorymanage/: lib.rs
src-tauri/migrations/: 20230224151459_init.down.sql  20230224151459_init.up.sql
src-tauri/src/: main.rs  setup.rs
src-tauri/src/dal/: arrival.rs  goods.rs  manager.rs  mod.rs  po.rs  so.rs  supplier.rs
src-tauri/src/error/: error.rs
src-tauri/src/service/: arrival.rs  goods.rs  mod.rs  purchase.rs  supplier.rs
src/app/: layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/login/countexit/: page.tsx
src/app/(auth)/login/qqvalidate/: page.tsx
src/app/accountsmanage/: page.tsx
src/app/accountsmanage/components/: newaccount.tsx
src/app/arrival/: page.tsx
src/app/examples/authentication/: page.tsx
src/app/examples/authentication/components/: user-auth-form.tsx
src/app/examples/music/: page.tsx
src/app/examples/tasks/: page.tsx
src/app/filemanage/: page.tsx
src/app/filemanage/components/: newfile.tsx
src/app/po/: page.tsx
src/app/quality-check/: index.less  page.tsx
src/app/so/: page.tsx
src/app/summary/: page.tsx
src/app/summary/components/: turnoverboard.tsx
src/app/summary/turnover/: page.tsx
src/app/upcar/: page.tsx
src/app/warehousing/: page.tsx
src/app/warehousing/components/: newwarehousing.tsx
src/app/workermanage/: page.tsx
src/assets/: rukudan.doc
src/components/: billing-form.tsx  callout.tsx  datatable.tsx  examples-nav.tsx  icons.tsx  menu.tsx  my-nav.tsx  newarrival.tsx  newpoform.tsx  newworker.tsx  sidebar-nav.tsx  user-account-nav.tsx  user-auth-form.tsx  walden.js
src/components/ui/: menubar.tsx
src/config/: dashboard.ts  site.ts  subscriptions.ts
src/data/: caigou.docx  chukudan.docx  rukudan.docx
src/lib/: auth.ts  printdocx.ts  sendVerificationRequest.ts  sendemail.ts
src/styles/: globals.css
src/types/: index.d.ts
src/utils/: excelUtils.ts  index.ts
styles/: Home.module.css  globals.css
