[package]
name = "app"
version = "0.1.1"
description = "A lis App"
authors = ["fffl"]
license = "MIT"
repository = "https://github.com/funny-lee/alis"
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
syn = "1"
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["shell-open", "window-all"] }
sqlx = { version = "0.6.3", features = [
	"runtime-tokio-rustls",
	"postgres",
	"chrono",
	"uuid",
] }
tracing = "0.1.37"
eyre = "0.6.8"
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
